Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -1276,7 +1276,7 @@
     "description": "Summary of number of errors as reported by the linter "
   },
   "unprocessedRequestTooltip": {
-    "message": "Filter tidak bekerja dengan baik saat peramban dimulai.\nMuat ulang halaman agar filter dapat bekerja dengan baik.",
+    "message": "Filter tidak dapat bekerja dengan baik saat peramban dimulai.\nMuat ulang halaman agar filter dapat bekerja dengan baik.",
     "description": "A warning which will appear in the popup panel if needed"
   },
   "dummy": {
