--- a/src/_locales/oc/messages.json
+++ b/src/_locales/oc/messages.json
@@ -428,7 +428,7 @@
     "description": "Appears aside each filter list in the _3rd-party filters_ pane"
   },
   "3pAutoUpdatePrompt1": {
-    "message": "Auto-update filter lists",
+    "message": "Mesa a jorn auto de las listas",
     "description": "A checkbox in the _3rd-party filters_ pane"
   },
   "3pUpdateNow": {
@@ -468,7 +468,7 @@
     "description": "English: Apply changes"
   },
   "3pGroupDefault": {
-    "message": "Built-in",
+    "message": "Integrats",
     "description": "Filter lists section name"
   },
   "3pGroupAds": {
@@ -924,7 +924,7 @@
     "description": "Third paragraph of 'Filter issues' section in Support pane"
   },
   "supportS4H": {
-    "message": "Bug report",
+    "message": "Senhalament d’avarias",
     "description": "Header of 'Bug report' section in Support pane"
   },
   "supportS4P1": {
