--- a/src/_locales/da/messages.json
+++ b/src/_locales/da/messages.json
@@ -352,7 +352,7 @@
     "description": ""
   },
   "settingsAdvancedUserPrompt": {
-    "message": "Jeg er en erfarne bruger",
+    "message": "Jeg er en erfaren bruger",
     "description": "Checkbox to let user access advanced, technical features"
   },
   "settingsPrefetchingDisabledPrompt": {
