--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -956,7 +956,7 @@
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportS6P2S2": {
-    "message": "Sorunlu web sayfasını yeniden yükledikten sonra sorunun hala var olup olmadığını doğrulayın.",
+    "message": "Sorunlu web sayfasını yeniden yükleyerek sorunun devam ettiğini doğrulayın.",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportS6URL": {
@@ -1044,7 +1044,7 @@
     "description": "Shown in the About pane"
   },
   "aboutCDNsInfo": {
-    "message": "Bir filtre listesi güncellenmesi gerektiğinde rastgele seçilen bir CDN kullanılır.",
+    "message": "Bir filtre listesinin güncellenmesi gerektiğinde rastgele seçilen bir CDN kullanılır",
     "description": "Shown in the About pane"
   },
   "aboutBackupDataButton": {
