--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -531,6 +531,10 @@
     "message": "Один фільтр на рядок. Фільтром може бути адреса сайту або фільтр у Adblock Plus-сумісному записі. Рядки, що починаються з <code>!</code> будуть проігноровані.",
     "description": "Short information about how to create custom filters"
   },
+  "1pTrustWarning": {
+    "message": "Do not add filters from untrusted sources.",
+    "description": "Warning against copy-pasting filters from random sources"
+  },
   "1pImport": {
     "message": "Імпортувати та додати",
     "description": "English: Import and append"
