--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -531,6 +531,10 @@
     "message": "Satu filter per baris. Filter dapat berupa nama hos, atau filter yang kompatibel dengan EasyList. Baris yang diawali dengan <code>!</code> akan diabaikan.",
     "description": "Short information about how to create custom filters"
   },
+  "1pTrustWarning": {
+    "message": "Do not add filters from untrusted sources.",
+    "description": "Warning against copy-pasting filters from random sources"
+  },
   "1pImport": {
     "message": "Impor dan tambahkan",
     "description": "English: Import and append"
