--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -532,7 +532,7 @@
     "description": "Short information about how to create custom filters"
   },
   "1pTrustWarning": {
-    "message": "Do not add filters from untrusted sources.",
+    "message": "신뢰할 수 없는 출처의 필터를 추가하지 마십시오.",
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pImport": {
