--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -532,7 +532,7 @@
     "description": "Short information about how to create custom filters"
   },
   "1pTrustWarning": {
-    "message": "Bitte keine Filter aus unseriösen Quellen hinzufügen.",
+    "message": "Verwenden Sie keine Filter aus unseriösen Quellen.",
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pImport": {
