--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -532,7 +532,7 @@
     "description": "Short information about how to create custom filters"
   },
   "1pTrustWarning": {
-    "message": "No agregar filtros desde fuentes no confiables.",
+    "message": "No añadir filtros de fuentes no confiables.",
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pImport": {
