--- a/platform/mv3/extension/_locales/br_FR/messages.json
+++ b/platform/mv3/extension/_locales/br_FR/messages.json
@@ -144,7 +144,7 @@
     "description": "This describes the 'complete' filtering mode"
   },
   "noFilteringModeDescription": {
-    "message": "List of hostnames for which no filtering will take place",
+    "message": "Roll eus anvioù domanioù el-lec'h ne vo silañ ebet",
     "description": "A short description for the editable field which lists trusted sites"
   },
   "behaviorSectionLabel": {
