--- a/src/_locales/fi/messages.json
+++ b/src/_locales/fi/messages.json
@@ -536,11 +536,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pImport": {
-    "message": "Tuo ja lisää...",
+    "message": "Tuo ja lisää…",
     "description": "Button in the 'My filters' pane"
   },
   "1pExport": {
-    "message": "Vie",
+    "message": "Vie…",
     "description": "Button in the 'My filters' pane"
   },
   "1pExportFilename": {
@@ -584,7 +584,7 @@
     "description": ""
   },
   "rulesExport": {
-    "message": "Vie tiedostoon",
+    "message": "Vie tiedostoon…",
     "description": "Button in the 'My rules' pane"
   },
   "rulesDefaultFileName": {
@@ -620,11 +620,11 @@
     "description": "A concise description of the 'Trusted sites' pane."
   },
   "whitelistImport": {
-    "message": "Tuo ja lisää",
+    "message": "Tuo ja lisää…",
     "description": "Button in the 'Trusted sites' pane"
   },
   "whitelistExport": {
-    "message": "Vie",
+    "message": "Vie…",
     "description": "Button in the 'Trusted sites' pane"
   },
   "whitelistExportFilename": {
