--- a/platform/mv3/extension/_locales/zh_TW/messages.json
+++ b/platform/mv3/extension/_locales/zh_TW/messages.json
@@ -76,7 +76,7 @@
     "description": ""
   },
   "aboutCode": {
-    "message": "程式原始碼（GPLv3）",
+    "message": "原始碼（GPLv3）",
     "description": "English: Source code (GPLv3)"
   },
   "aboutContributors": {
