Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -704,7 +704,7 @@
     "description": "Tooltip for the button to bring up logger output filtering options"
   },
   "loggerRowFiltererBuiltinNot": {
-    "message": "Bukan",
+    "message": "Tidak",
     "description": "A keyword in the built-in row filtering expression"
   },
   "loggerRowFiltererBuiltinEventful": {
