--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -56,7 +56,7 @@
     "description": "appears as tab name in dashboard"
   },
   "supportPageName": {
-    "message": "Ajută-ne",
+    "message": "Asistență",
     "description": "appears as tab name in dashboard"
   },
   "assetViewerPageName": {
