--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -480,7 +480,7 @@
     "description": "Filter lists section name"
   },
   "3pGroupMalware": {
-    "message": "Ochrona przed malware, bezpieczeństwo",
+    "message": "Ochrona przed złośliwym oprogramowaniem, bezpieczeństwo",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
