--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Превключване на козметичното филтриране",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Отпуснат режим на блокиране",
     "description": "Label for keyboard shortcut used to relax blocking mode"
