--- a/src/_locales/br_FR/messages.json
+++ b/src/_locales/br_FR/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Enaouiñ ar silañ kenedel",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Distanañ ar mod stankañ",
     "description": "Label for keyboard shortcut used to relax blocking mode"
