--- a/src/_locales/gl/messages.json
+++ b/src/_locales/gl/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Activar filtrado cosmético",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Relaxar o modo de bloqueo",
     "description": "Label for keyboard shortcut used to relax blocking mode"
