--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -1251,6 +1251,10 @@
     "message": "הפעל/כבה מסננים קוסמטיים",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "הרפה את מצב החסימה הנוכחי",
     "description": "Label for keyboard shortcut used to relax blocking mode"
