--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Attiva/Disattiva filtri cosmetici",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Rilassa la modalità di blocco",
     "description": "Label for keyboard shortcut used to relax blocking mode"
