--- a/src/_locales/lv/messages.json
+++ b/src/_locales/lv/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Pārslēgt kosmētisko atlasi",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Atslābinātais aizturēšanas režīms",
     "description": "Label for keyboard shortcut used to relax blocking mode"
