--- a/src/_locales/sq/messages.json
+++ b/src/_locales/sq/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Ç/Aktivizoj filtrat kozmetikë",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Dobësoj mënyrën e bllokimit",
     "description": "Label for keyboard shortcut used to relax blocking mode"
