--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Kozmetik filtrelemeyi aç/kapat",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Engelleme modunu gevşet",
     "description": "Label for keyboard shortcut used to relax blocking mode"
