--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -1251,6 +1251,10 @@
     "message": "Bật/tắt lọc phần tử",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
+  "toggleJavascript": {
+    "message": "Toggle JavaScript",
+    "description": "Label for keyboard shortcut used to toggle no-scripting switch"
+  },
   "relaxBlockingMode": {
     "message": "Nới lỏng chế độ chặn",
     "description": "Label for keyboard shortcut used to relax blocking mode"
