Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -168,7 +168,7 @@
     "description": "Tooltip for the no-cosmetic-filtering per-site switch"
   },
   "popupTipNoRemoteFonts": {
-    "message": "Externe Schriftarten für diese Website zulassen/blockieren",
+    "message": "Externe Schriftarten für diese Website blockieren/zulassen",
     "description": "Tooltip for the no-remote-fonts per-site switch"
   },
   "popupTipNoRemoteFonts1": {
@@ -1252,7 +1252,7 @@
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
   "toggleJavascript": {
-    "message": "Toggle JavaScript",
+    "message": "JavaScript aktivieren/deaktivieren",
     "description": "Label for keyboard shortcut used to toggle no-scripting switch"
   },
   "relaxBlockingMode": {
