--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -1252,7 +1252,7 @@
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
   "toggleJavascript": {
-    "message": "Toggle JavaScript",
+    "message": "הפעלה וחסימה של JavaScript",
     "description": "Label for keyboard shortcut used to toggle no-scripting switch"
   },
   "relaxBlockingMode": {
